--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
     "font-awesome": "^4.7.0",
+    "highcharts": "^4.2.7",
     "mongojs": "^2.4.0",
     "ng2-ace-editor": "^0.2.2",
     "ng2-highcharts": "^1.0.0",
