--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ng2-highcharts": "^1.0.0",
     "rxjs": "^5.1.0",
     "socket-io": "^1.0.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "moment": "^2.14.1"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.6",
