[ah][np] Implements registration with database, attempts to implement login.

--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/highcharts": "^4.2.55",
+    "ace-builds": "^1.2.6",
     "angular-bootstrap": "^0.12.2",
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
     "font-awesome": "^4.7.0",
+    "highcharts": "^5.0.12",
     "mongojs": "^2.4.0",
+    "mongoose": "^4.10.5",
     "ng2-ace-editor": "^0.2.2",
     "ng2-highcharts": "^1.0.0",
     "rxjs": "^5.1.0",
