--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "ejs": "^2.5.6",
     "font-awesome": "^4.7.0",
     "highcharts": "^4.2.7",
+    "moment": "^2.18.1",
     "mongojs": "^2.4.0",
     "ng2-ace-editor": "^0.2.2",
     "ng2-highcharts": "^1.0.0",
     "rxjs": "^5.1.0",
     "socket-io": "^1.0.0",
-    "zone.js": "^0.8.4",
-    "moment": "^2.14.1"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.6",
