--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "mongojs": "^2.4.0",
     "ng2-ace-editor": "^0.2.2",
     "ng2-highcharts": "^1.0.0",
+    "ng2-smart-table": "^1.2.1",
     "rxjs": "^5.1.0",
     "socket-io": "^1.0.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.6",
+    "@angular/cli": "^1.1.1",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
@@ -51,8 +52,8 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "mocha": "^3.4.2",
     "karma-phantomjs-launcher": "^1.0.4",
+    "mocha": "^3.4.2",
     "protractor": "~5.1.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0",
