--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/highcharts": "^4.2.55",
     "ace-builds": "^1.2.6",
     "angular-bootstrap": "^0.12.2",
-    "angular2-datatable": "^0.6.0",
+    "angular2-data-table": "^0.6.0",
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
     "font-awesome": "^4.7.0",
