--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^4.10.5",
     "ng2-ace-editor": "^0.2.2",
     "ng2-highcharts": "^1.0.0",
+    "ng2-smart-table": "^1.2.1",
     "rxjs": "^5.1.0",
     "socket-io": "^1.0.0",
     "zone.js": "^0.8.12"
