--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "testP": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "trial": "ts-node src/server.ts"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.2.3",
     "@angular/router": "^4.0.0",
     "@types/highcharts": "^4.2.55",
     "ace-builds": "^1.2.6",
@@ -60,7 +62,7 @@
     "protractor": "~5.1.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0",
-    "ts-node": "~2.0.0",
+    "ts-node": "^2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
   }
