adding socket.io

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ng2-highcharts": "^1.0.0",
     "ng2-smart-table": "^1.2.1",
     "rxjs": "^5.1.0",
-    "socket-io": "^1.0.0",
+    "socket-io": "0.9.x",
+    "socket.io-mongodb": "^1.1.1",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
