[my] fix travis file socket-io error

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
   - npm install -g @angular/cli
   - npm install
+  - npm install socket-io
 
 script:
   - ng build
@@ -25,7 +26,7 @@ services:
 before_install:
   - docker build -t justforexwa/justforex-main .
   - docker run -d -p 80:4200 justforexwa/justforex-main
- 
+
 after_success:
    - docker login -u="justforexwa" -p="ahdgmypnd20"
    - docker push justforexwa/justforex-main
