[my] try travis fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_script:
   - sh -e /etc/init.d/xvfb start
   - npm install -g @angular/cli
   - npm install
-  - npm install socket-io
+  - npm install socket.io-mongodb
+  - npm install
 
 script:
   - ng build
