--- a/package.json
+++ b/package.json
@@ -14,21 +14,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.6",
+    "@angular/animations": "^4.2.3",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/flex-layout": "^2.0.0-rc.1",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/material": "^2.0.0-beta.7",
     "@angular/platform-browser": "^4.2.3",
-    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.2.3",
     "@angular/platform-server": "^4.2.3",
-    "@angular/router": "^4.0.0",
-    "@types/highcharts": "^4.2.55",
-    "@types/socket.io-client": "^1.4.29",
+    "@angular/router": "^4.2.3",
+    "@types/highcharts": "^4.2.57",
     "ace-builds": "^1.2.6",
     "angular-bootstrap": "^0.12.2",
     "angular2-datatable": "^0.6.0",
@@ -39,13 +37,13 @@
     "highcharts": "^4.2.7",
     "moment": "^2.18.1",
     "mongojs": "^2.4.0",
-    "mongoose": "^4.10.5",
+    "mongoose": "^4.10.7",
     "multer": "^1.3.0",
-    "ng2-ace-editor": "^0.2.2",
+    "ng2-ace-editor": "^0.2.3",
     "ng2-file-upload": "^1.2.1",
     "ng2-highcharts": "^1.0.0",
     "ng2-smart-table": "^1.2.1",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.4.1",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "zone.js": "^0.8.12"
