--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ branches:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - rm -rf node_modules
+  - npm update
+  - npm upgrade
   - npm install -g @angular/cli
   - npm install
 
